cambio video de youtube 2da cart

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <section class="hero" >
     <div class="container"> 
       <h1>
-        Mario Javier Bucheli <strong>Diseñador Gráfico</strong> <br/> Mg en <strong>Diseño y creación interactiva</strong> <br> Posgrado en <strong>Arte Mediales</strong>  <br/> <strong>Docente Investigador </strong> 
+        Mario Javier Bucheli <strong>Diseñador Gráfico</strong> <br/> Mg en <strong>Diseño y creación interactiva</strong> <br> Desarrollardor <strong>WEB</strong>  <br/> <strong>Docente Investigador </strong> 
       </h1>
       <img class="hero-image" src="imagenes/hero.jpg" width="500" height="300" /> 
     </div> 
@@ -113,7 +113,7 @@
       <article class="event" >
        <figure class="event-imagecontainer" >
         <div class="flexible-video">
-          <iframe class="youtube-video" width="560" height="315" src="https://www.youtube.com/embed/lnfBVmDn8zM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe class="youtube-video" width="560" height="315" src="https://www.youtube.com/embed/Lz2t1VbJw00" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
        </figure>
        <div class="event-details" > 
