--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <title>devSing</title>
   <link rel="icon" type="image/png" href="imagenes/bushdigraf_logo_gris.png" >
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="En este sitio puedes vizualizar el portafolio de proyectos deldiseñador y desarrollador visual Mario Buchely" > 
+  <meta name="description" content="En este sitio puedes vizualizar el portafolio de proyectos deldiseñador y desarrollador visual Mario Buchely" >
+  <meta name="robots" content="index, follow" > 
   <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Source+Sans+Pro:300,300i,400,400i,600,600i,700,700i&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="estilo_css/estilo.css"> 
 </head>
