cambio de nombre

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <section class="hero" >
     <div class="container"> 
       <h1>
-        Mario Javier Bucheli <strong>Diseñador Gráfico</strong> <br/> Mg en <strong>Diseño y creación interactiva</strong> <br> Desarrollardor <strong>WEB</strong>  <br/> <strong>Docente Investigador </strong> 
+        Mario Buchely <strong>Diseñador Gráfico</strong> <br/> Mg en <strong>Diseño y creación interactiva</strong> <br> Desarrollardor <strong>WEB</strong>  <br/> <strong>Docente Investigador </strong> 
       </h1>
       <img class="hero-image" src="imagenes/hero.jpg" width="500" height="300" /> 
     </div> 
