re-redaccion def proyecto expotempo

--- a/index.html
+++ b/index.html
@@ -49,9 +49,8 @@
           <h6 class="project-exposition" >Exposición Itinerante</h6>
           <p class="project-date" ><small><strong>Fecha:</strong> 30 de noviembre 2015</small></p>
           <p class="project-url" ><small><strong>Sitio Web:</strong> www.expotempo.icsh.co/</small></p>
-          <p class="project-description" >Esta exposición se presenta a la sociedad local, regional y nacional
-             como un producto del proyecto de investigación, 
-             “Procesos de territorialización de la memoria en escenarios de postconflicto. 
+          <p class="project-description" >Esta exposición tuvo un alcance de tipo local, regional y nacional
+             como un producto del proyecto de investigación, “Procesos de territorialización de la memoria en escenarios de postconflicto. 
              Caracterización, implicación y lineamientos de políticas en el orden local, regional y nacional”. 
              Este proyecto fue financiado por COLCIENCIAS, Universidad de Caldas y la Red Internacional de Estudios sobre Territorio y Cultura (RETEC) con el acompañamiento del Centro Nacional de Memoria Histórica (CNMH), en la Universidad de Caldas estuvo adscrito al Instituto de Investigaciones de Ciencias Sociales y Humanas (ICSH), al grupo de investigación Territorialidades y al Doctorado en Estudios Territoriales (DET).</p>
       </div>
